tests/fixtures/invalid/none_bitxor_bytes.py
# Cannot bitwise XOR None and Bytes
x: None = None ^ b"hello"
